[package]
name = "bevy_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
rand = "0.8.5"

#some debug mode optimizations
[profile.dev]
opt-level = 1

#high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
